plugins {
    id 'java'
}

group 'com.tanglover'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenLocal()
    maven { url "http://repo.maven.apache.org/maven2" }
    jcenter()
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

//    compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.4'

//    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.0.6.RELEASE'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.6.RELEASE'



    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.6.RELEASE') {
        exclude(module: 'commons-logging')
    }

    // apache
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
    compile(group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6') {
        exclude(module: 'commons-logging')
    }
    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'

    // ali
    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.51'


    compile group: 'javax.servlet', name: 'servlet-api', version: '3.0-alpha-1'

    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'

    // dom4j
    compile group: 'dom4j', name: 'dom4j', version: '1.6.1'
    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.11.1'

    compile group: 'org.jdom', name: 'jdom', version: '1.1.3'

    // 斗鱼弹幕
    compile group: 'com.yycdev', name: 'douyu-sdk', version: '1.0.0'

    // mysql connector
    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'

}